[package]
name = "kvutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storage = {path = "../storage"}
rand = "0.8"
bytes = "1.2.1"
env_logger = "0.9"
log = "0.4"
clap = {version = "4.0", default-features = false, features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"]}
