[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
skiplist = "0.4"
bitflags = "1.3"
toml = "0.5.9"
serde = "1.0"
serde_derive = "1.0"
lazy_static="1.4"
rand = "0.8"
memmap2 = "0.5"
byteorder = "1.4"
log = "0.4"
crc32fast = "1.3"
