[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
skiplist = "0.5"
bitflags = "2"
toml = "0.7"
serde = "1.0"
serde_derive = "1.0"
lazy_static="1.4"
rand = "0.8"
memmap2 = "0.7"
byteorder = "1.4"
log = "0.4"
crc32fast = "1.3"
superslice = "1.0"
lru = "0.10"
integer-encoding = "4.0"
governor = "0.5"
threadpool = "1"
crossbeam = "0.8"
arc-swap = "1.5"
num_enum = "0.6.1"
thiserror = "1.0.40"
fd-lock = "4.0"
ouroboros = "0.17.0"
pretty-hex = "0.3.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
